# pg-xpatch

./: .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pg_xpatch.control  pyproject.toml  xptest.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
benchmark/: run_benchmark.sh
docs/: backup-and-restore.md  benchmarks.md  caching-and-performance.md  configuration.md  doco_sitemap.yaml  example-notes-app.md  installation.md  monitoring.md  overview.md  quickstart.md  server-parameters.md  sql-functions.md  storage-model.md  tuning-compression.md  tuning-read-performance.md  types-and-limitations.md
examples/notes-app/: .env.example  README.md  docker-compose.yml  drizzle.config.ts  package.json
sql/: pg_xpatch--0.1.0--0.1.1.sql  pg_xpatch--0.1.0.sql  pg_xpatch--0.1.1--0.2.0.sql  pg_xpatch--0.1.1.sql  pg_xpatch--0.2.0--0.2.1.sql  pg_xpatch--0.2.0.sql  pg_xpatch--0.2.1--0.3.0.sql  pg_xpatch--0.2.1.sql  pg_xpatch--0.3.0--0.3.1.sql  pg_xpatch--0.3.0.sql  pg_xpatch--0.3.1--0.4.0.sql  pg_xpatch--0.3.1.sql  pg_xpatch--0.4.0--0.5.0.sql  pg_xpatch--0.4.0.sql  pg_xpatch--0.5.0--0.5.1.sql  pg_xpatch--0.5.0.sql  pg_xpatch--0.5.1--0.6.0.sql  pg_xpatch--0.5.1.sql  pg_xpatch--0.6.0--0.6.1.sql  pg_xpatch--0.6.0.sql  pg_xpatch--0.6.1--0.6.2.sql  pg_xpatch--0.6.1.sql  pg_xpatch--0.6.2--0.6.3.sql  pg_xpatch--0.6.2.sql  pg_xpatch--0.6.3--0.7.0.sql  pg_xpatch--0.6.3.sql  pg_xpatch--0.7.0--0.8.0.sql  pg_xpatch--0.7.0.sql  pg_xpatch--0.8.0.sql
src/: pg_xpatch.c  pg_xpatch.h  xpatch_cache.c  xpatch_cache.h  xpatch_chain_index.c  xpatch_chain_index.h  xpatch_compress.c  xpatch_compress.h  xpatch_config.c  xpatch_config.h  xpatch_encode_pool.c  xpatch_encode_pool.h  xpatch_hash.h  xpatch_insert_cache.c  xpatch_insert_cache.h  xpatch_l2_cache.c  xpatch_l2_cache.h  xpatch_l3_cache.c  xpatch_l3_cache.h  xpatch_l3_eviction.c  xpatch_l3_eviction.h  xpatch_path_planner.c  xpatch_path_planner.h  xpatch_seq_cache.c  xpatch_seq_cache.h  xpatch_startup_warm.c  xpatch_startup_warm.h  xpatch_stats_cache.c  xpatch_stats_cache.h  xpatch_storage.c  xpatch_storage.h  xpatch_tam.c  xpatch_tam.h  xpatch_utils.c  xpatch_warm.c  xpatch_warm.h
test/: run_tests.sh
test/expected/: 00_setup.out  01_basic.out  02_compression.out  03_reconstruction.out  04_keyframes.out  05_cache.out  06_errors.out  07_indexes.out  08_parallel.out  09_multi_delta.out  10_no_group.out  11_delete.out  12_vacuum.out  13_crash_recovery.out  14_describe.out  15_warm_cache.out  16_auto_index.out  17_edge_cases.out  18_restore_mode.out  (+2 more)
tests/: __init__.py  conftest.py  test_advisory_lock_collision.py  test_basic.py  test_cache_max_entry.py  test_compression.py  test_crash_recovery.py  test_datum_roundtrip.py  test_deadlock_delete.py  test_deep_audit_bugs.py  test_delete.py  test_e2e_correctness.py  test_empty_content.py  test_encode_pool.py  test_encode_pool_race_condition.py  test_errors.py  test_ffi_tag_encoding.py  test_fifo_empty_content.py  test_guc_settings.py  test_indexes.py  test_l2_cache.py  test_l3_cache.py  test_l3_eviction.py  test_multi_delta.py  test_no_group.py  test_parallel.py  test_path_planner.py  test_restore_mode.py  test_seq_scan_visibility.py  test_smoke.py  test_startup_warming.py  test_stats_batching.py  test_stats_cache.py  test_transactions.py  test_types.py  test_utility_functions.py  test_vacuum.py  test_warm_cache_parallel.py
xptest/: __init__.py  benchmarks.py  cli.py  database.py  decorators.py  discovery.py  fixtures.py  models.py  reporting.py  runner.py
(+74 files in other folders)
