[project]
name = "xptest"
version = "0.1.0"
description = "Test runner for pg-xpatch PostgreSQL extension"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "pg-xpatch contributors" }
]
keywords = ["postgresql", "testing", "pg-xpatch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "psycopg[binary]>=3.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "ruff>=0.1",
    "pytest>=7.0",
]

[project.scripts]
xptest = "xptest.cli:main"

[project.urls]
Homepage = "https://github.com/pg-xpatch/pg-xpatch"
Repository = "https://github.com/pg-xpatch/pg-xpatch"
Documentation = "https://github.com/pg-xpatch/pg-xpatch#readme"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["xptest*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
